bb.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb
  name: bb
spec:
  containers:
  - image: busybox:1.28
    name: bb
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
