frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run node-app --image=legacywhisperer/react-app:latest --dry-run=true --replicas=3 --restart=Always --record=true --output=yaml
  creationTimestamp: null
  labels:
    run: react-app
  name: react-app
spec:
  replicas: 3
  selector:
    matchLabels:
      run: react-app
      tier: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: react-app
        tier: frontend
    spec:
      containers:
      - image: legacywhisperer/react-app:latest
        name: react-app
