node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-app
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-app
    spec:
      containers:
      - image: legacywhisperer/node-app:latest
        name: node-app
        resources: {}
status: {}
