node_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"app":"node-app"},"name":"node-app","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"node-app"}},"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"node-app"}},"spec":{"containers":[{"image":"legacywhisperer/node-app:latest","name":"node-app","resources":{}}]}}},"status":{}}
  creationTimestamp: 2020-07-14T19:07:09Z
  generation: 2
  labels:
    app: node-app
  name: node-app
  namespace: default
  resourceVersion: "7483"
  selfLink: /apis/apps/v1/namespaces/default/deployments/node-app
  uid: ab7b8e5f-8153-44a2-95cb-8f03d6a2fe67
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: node-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-app
    spec:
      containers:
      - env:
        - name: API_ROOT
#          value: http://node-svc:30000/api
          value: http://node-svc:30000/api
        image: legacywhisperer/node-app:latest
        imagePullPolicy: Always
        name: node-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2020-07-14T19:07:11Z
    lastUpdateTime: 2020-07-14T19:07:11Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2020-07-14T19:07:09Z
    lastUpdateTime: 2020-07-14T19:31:41Z
    message: ReplicaSet "node-app-7d4cfc4bcf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
