react-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1","kubernetes.io/change-cause":"kubectl run react-app --image=legacywhisperer/react-app:latest --labels=tier=api --dry-run=true --output=yaml --restart=Always --replicas=3 --record=true"},"creationTimestamp":"2020-07-09T00:02:23Z","generation":1,"labels":{"tier":"api"},"name":"react-app","namespace":"default","resourceVersion":"101130","selfLink":"/apis/apps/v1/namespaces/default/de [...]
    kubernetes.io/change-cause: kubectl run react-app --image=legacywhisperer/react-app:latest
      --labels=tier=api --dry-run=true --output=yaml --restart=Always --replicas=3
      --record=true
  creationTimestamp: 2020-07-09T00:03:43Z
  generation: 1
  labels:
    tier: api
  name: react-app
  resourceVersion: "101311"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/react-app
  uid: 3a486a70-f0b7-4b6b-aa04-bbce28f98c81
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        tier: api
    spec:
      containers:
      - image: legacywhisperer/react-app:latest
        imagePullPolicy: Always
        name: react-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: 2020-07-09T00:03:43Z
    lastUpdateTime: 2020-07-09T00:03:43Z
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: 2020-07-09T00:03:43Z
    lastUpdateTime: 2020-07-09T00:03:43Z
    message: ReplicaSet "react-app-5fcff9cffb" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 3
