react_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"app":"react-app"},"name":"react-app","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"react-app"}},"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"react-app"}},"spec":{"containers":[{"image":"legacywhisperer/react-app:latest","name":"react-app","resources":{}}]}}},"status":{}}
  creationTimestamp: 2020-07-14T19:07:29Z
  generation: 1
  labels:
    app: react-app
  name: react-app
  namespace: default
  resourceVersion: "4940"
  selfLink: /apis/apps/v1/namespaces/default/deployments/react-app
  uid: 13b8935a-62db-4090-b64f-ac5d530c98c8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: react-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: react-app
    spec:
      containers:
      - image: legacywhisperer/react-app:latest
        imagePullPolicy: Always
        name: react-app
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2020-07-14T19:07:32Z
    lastUpdateTime: 2020-07-14T19:07:32Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2020-07-14T19:07:29Z
    lastUpdateTime: 2020-07-14T19:07:32Z
    message: ReplicaSet "react-app-67bc945654" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
