backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run node-app --image=legacywhisperer/node-app:latest --dry-run=true --replicas=3 --restart=Always --record=true --output=yaml
  creationTimestamp: null
  labels:
    run: node-app
    tier: backend
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: node-app
      tier: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: node-app
        tier: backend
    spec:
      containers:
      - image: legacywhisperer/node-app:latest
        name: node-app
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: node-app
    tier: backend
  name: apiserver
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: node-app
    tier: backend
  type: NodePort
status:
  loadBalancer: {}
