kitchensink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongodb
    tier: backend
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      tier: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
        tier: backend
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports: 
          - containerPort: 27017
        volumeMounts:
        - mountPath: "/data"
          name: pv-mongo
      volumes:
      - name: pv-mongo
        persistentVolumeClaim:
          claimName: pvc-mongo

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongosvc
    tier: backend
  name: mongosvc
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongosvc
    tier: backend
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl run node-app --image=legacywhisperer/node-app:latest --dry-run=true --replicas=3 --restart=Always --record=true --output=yaml
  creationTimestamp: null
  labels:
    run: node-react
    tier: frontend
  name: node-react
spec:
  replicas: 3
  selector:
    matchLabels:
      run: node-react
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: node-react
        tier: backend
    spec:
      containers:
      - image: legacywhisperer/node-app:latest
        name: node-app
        ports: 
          - containerPort: 3000
      - image: legacywhisperer/react-app:latest
        name: react-app
        ports: 
          - containerPort: 4100
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: node-svc
    tier: frontend
  name: node-svc
spec:
  ports:
  - port: 3000
    nodePort: 30000
    protocol: TCP
    targetPort: 3000
  selector:
    run: node-svc
    tier: frontend
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: react-svc
    tier: frontend
  name: react-svc
spec:
  ports:
  - port: 4100
    protocol: TCP
    targetPort: 4100
    nodePort: 30100
  selector:
    run: react-svc
    tier: frontend
  type: NodePort
