mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: mongodb
  name: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 3027017
  selector:
    run: mongodb
  type: NodePort
status:
  loadBalancer: {}
