node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"app":"node-app"},"name":"node-app","namespace":"default"},"spec":{"ports":[{"port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"node-app"},"type":"NodePort"},"status":{"loadBalancer":{}}}
  creationTimestamp: 2020-07-14T19:17:32Z
  labels:
    app: node-app
  name: node-svc
  namespace: default
  resourceVersion: "6063"
  selfLink: /api/v1/namespaces/default/services/node-app
  uid: ae8987e9-0f6c-470a-80d9-2a2dc3f39057
spec:
  clusterIP: 10.101.235.164
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-svc
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer:
    ingress:
    - hostname: localhost
