react-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: react-app
  name: react-app
spec:
  ports:
  - port: 4100
    protocol: TCP
    targetPort: 4100
  selector:
    app: react-app
  type: NodePort
status:
  loadBalancer: {}
