tt-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tt-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.65.0/24
        except:
        - 172.17.1.0/24
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:
    - ipBlock:
        cidr: 10.1.0.0/24
    ports:
    - protocol: TCP
      port: 3000
